# Pellets

./: .gitignore  404.html  LICENSE.md  README.md  index.html  installed_packages.json  mkdocs.yml  pellets.db  pyproject.toml  test_generate.json
docs/: conf.py
pellets/: config.py  logger.py  pellet.py  records.py
pellets/utils/: logger.py
search/: search_index.json
tests/: test_logging_decorator.py
