[tool.poetry]
name = "pellets"
version = "0.1.0"
description = ""
authors = ["teleoflexuous <teleoflexuous@proton.me>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.2"

[tool.poetry.group.tests.dependencies]
llama-cpp-python = "^0.2.51"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"
aiohttp = "^3.9.3"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
