[tool.poetry]
name = "pellets"
version = "0.1.0"
description = ""
authors = ["teleoflexuous <teleoflexuous@proton.me>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.2"
orjson = "^3.9.15"

[tool.poetry.group.tests.dependencies]
llama-cpp-python = "^0.2.51"
pytest = "^8.0.2"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
mdx-include = "^1.4.2"
pymdown-extensions = "^10.7.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
